--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=e-commerce
+server.port=8085
+spring.data.mongodb.uri=mongodb+srv://<username>:<password>@<cluster-url>/ecommerce_db?retryWrites=true&w=majority
